c4prj2_input/grade.txt
Grading at Mon Mar  8 21:01:14 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:12:24: error: implicit declaration of function ‘strlen’ [-Werror=implicit-function-declaration]
   char * copy = malloc(strlen(str)*sizeof(copy));
                        ^
input.c:12:24: error: incompatible implicit declaration of built-in function ‘strlen’ [-Werror]
input.c:12:24: note: include ‘<string.h>’ or provide a declaration of ‘strlen’
input.c:13:3: error: implicit declaration of function ‘strcpy’ [-Werror=implicit-function-declaration]
   strcpy(copy,str);
   ^
input.c:13:3: error: incompatible implicit declaration of built-in function ‘strcpy’ [-Werror]
input.c:13:3: note: include ‘<string.h>’ or provide a declaration of ‘strcpy’
input.c:14:17: error: implicit declaration of function ‘strtok’ [-Werror=implicit-function-declaration]
   char * card = strtok(copy," ");
                 ^
input.c:14:17: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
input.c:16:16: error: implicit declaration of function ‘card_from_letter’ [-Werror=implicit-function-declaration]
     card_t c = card_from_letter(copy[0],copy[1]);
                ^
input.c:16:16: error: invalid initializer
input.c:17:10: error: invalid type argument of ‘->’ (have ‘card_t {aka struct card_tag}’)
     if( c->value != "?"){
          ^
input.c:18:21: error: ‘future_cards_t {aka struct future_cards_tag}’ has no member named ‘deck’
       add_card_to(fc->deck[n_decks],c);
                     ^
input.c:18:28: error: ‘n_decks’ undeclared (first use in this function)
       add_card_to(fc->deck[n_decks],c);
                            ^
input.c:18:28: note: each undeclared identifier is reported only once for each function it appears in
input.c:22:53: error: ‘deck’ undeclared (first use in this function)
      add_future_card(fc,fc->n_decks[n_decks]->cards[deck->n_cards],unknown);
                                                     ^
input.c:24:10: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     card = strtok(NULL," ");
          ^
input.c:27:12: error: ‘future_cards_t {aka struct future_cards_tag}’ has no member named ‘deck’
   return fc->deck;
            ^
input.c: In function ‘read_input’:
input.c:32:34: error: invalid operands to binary * (have ‘size_t * {aka long unsigned int *}’ and ‘long unsigned int’)
   deck_t ** read = malloc(n_hands*sizeof(*read));
                                  ^
input.c:39:7: error: request for member ‘n_cards’ in something not a structure or union
   read->n_cards = i;
       ^
input.c: In function ‘hand_from_string’:
input.c:28:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
